--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,14 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #949292;
+    background: linear-gradient(
+        90deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(9, 111, 121, 1) 27%,
+        rgba(9, 114, 125, 1) 73%,
+        rgba(2, 0, 36, 1) 100%
+    );
+    height: 100vh;
 }
 
 code {
@@ -22,5 +29,9 @@ a {
 }
 
 button {
-  all: unset;
+    all: unset;
+}
+
+h1, h2,h3,h4,h5,h6 {
+    all: unset;
 }
